# template_cpp_project

./: !build_project.cmd  !open_project.cmd  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/libraries/mymath/: mymath.h
tests/: CMakeLists.txt
tests/mymath/: CMakeLists.txt  Sub.cpp  Sum.cpp
